fix z-index error on glow-background

--- a/final/style.css
+++ b/final/style.css
@@ -270,6 +270,8 @@ nav.mobile ul li a:hover {
   left: 50%;
   top: 50%;
   translate: -50% -50%;
+
+  z-index: -10;
 }
 
 #hero
